testsuite/tests/indexed-types/should_fail/TyFamArity1.stderr

TyFamArity1.hs:4:23: error:
    • Expecting one more argument to ‘IO’
      Expected a type, but ‘IO’ has kind ‘* -> *’
    • In the type ‘IO’
      In the type instance declaration for ‘T’
